# parlia-elc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  SPEC.jp.md  SPEC.md
.github/workflows/: ci.yaml
enclave-light-client/: Cargo.toml
enclave-light-client/src/: client.rs  context.rs  errors.rs  lib.rs
light-client/: Cargo.toml  build.rs
light-client/src/: client.rs  client_def.rs  client_state.rs  client_type.rs  commitment.rs  consensus_state.rs  errors.rs  fork_spec.rs  lib.rs  message.rs  misbehavior.rs  misbehaviour.rs  misc.rs  path.rs  proof.rs
light-client/src/fixture/: localnet.rs  mod.rs
light-client/src/header/: account.rs  config.rs  constant.rs  epoch.rs  eth_header.rs  eth_headers.rs  hardfork.rs  mod.rs  testdata.rs  validator_set.rs  vote_attestation.rs
light-client/src/testdata/: localnet.rs  mod.rs
light-client/tests/: README.md  verify.rs
proto/: Cargo.toml
proto-compiler/: Cargo.toml  README.md
proto-compiler/src/: main.rs
proto-compiler/src/cmd/: compile.rs
proto/definitions/ibc/lightclients/parlia/v1/: parlia.proto
proto/definitions/ibc/ligthtclients/parlia/v1/: parlia.proto
proto/src/: IBC_GO_COMMIT  lib.rs
proto/src/prost/: cosmos.upgrade.v1beta1.rs  google.protobuf.rs  ibc.lightclients.parlia.v1.rs
