[package]
name = "parlia-ibc-elc"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

prost = { version = "0.11", default-features = false }

log = { version = "0.4.8", optional = true }
log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
thiserror = { version = "1.0.30", optional = true }
thiserror-sgx = { package = "thiserror", git = "https://github.com/mesalock-linux/thiserror-sgx.git", optional = true }

lcp-types = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
light-client = { git = "https://github.com/datachainlab/lcp.git" }
light-client-registry = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
commitments = { git = "https://github.com/datachainlab/lcp.git" }
crypto = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
validation-context = { git = "https://github.com/datachainlab/lcp.git" }

parlia-ibc-lc = { path = "../light-client" }
parlia-ibc-proto = { version = "0.1.0", path = "../proto", default-features = false }

[features]
default = ["std"]
std = [
    "log",
    "thiserror",
    "light-client-registry/std"
]
sgx = [
    "log-sgx",
    "sgx_tstd",
    "thiserror-sgx",
    "light-client-registry/sgx"
]

[dev-dependencies]
store = { git = "https://github.com/datachainlab/lcp.git", default-features = false }

parlia-ibc-lc = { path = "../light-client", features = ["testdata"] }
hex-literal = "0.3.1"
