[package]
name = "parlia-ibc-lc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
light-client = { git = "https://github.com/datachainlab/lcp.git" }
light-client-registry = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
lcp-types = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
commitments = { git = "https://github.com/datachainlab/lcp.git" }
crypto = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
validation-context = { git = "https://github.com/datachainlab/lcp.git" }

ibc-proto = { version = "0.26.0", default-features = false, features = ["parity-scale-codec", "borsh"] }
rlp = { version = "0.5.1", default-features = false }
prost = { version = "0.11", default-features = false }

parlia-ibc-proto = { version = "0.1.0", path = "../proto", default-features = false }

tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
trie-eip1186 = { git = "https://github.com/kubo39/trie", rev = "1a02eedd7f4ce31a68dc5f876e16c7fe4bb9404e", default-features = false }
patricia-merkle-trie = { git = "https://github.com/bluele/patricia-merkle-trie", rev = "ea5094383596137c396609d873d2df10d8415f58", default-features = false, features = ["keccak"] }

k256 = { version = "0.12.0-pre.0", default-features = false, features = ["alloc", "ecdsa"] }
elliptic-curve = { version = "0.12.3", default-features = false, features = ["hazmat", "sec1"] }

hex-literal = "0.3.1"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
store = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
