[package]
name = "parlia-elc"
version = "0.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.14", default-features = false }

rlp = { version = "0.5.2", default-features = false }
prost = { version = "0.11", default-features = false }

parlia-ibc-proto = { version = "0.2.0", path = "../proto", default-features = false }

tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }
trie-db = { version= "0.24.0", default-features = false }
patricia-merkle-trie = { git = "https://github.com/bluele/patricia-merkle-trie", branch = "no-std-keccak-hasher", default-features = false, features = ["keccak"] }
primitive-types = { version = "0.12.1", default-features = false }

k256 = { version = "0.13.1", default-features = false, features = ["alloc", "ecdsa"] }
elliptic-curve = { version = "0.13.5", default-features = false, features = ["hazmat", "sec1"] }

serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

milagro_bls = { git = "https://github.com/datachainlab/milagro_bls", rev = "bc2b5b5e8d48b7e2e1bfaa56dc2d93e13cb32095", default-features = false }
hex-literal = "0.4.1"

[dev-dependencies]
store = { git = "https://github.com/datachainlab/lcp.git", rev = "v0.2.14", default-features = false }
time = { version = "0.3", default-features = false }
rstest = "0.18"

[features]
default = ["std"]
std = [
    "light-client/std",
    "trie-db/std",
    "patricia-merkle-trie/std"
]
dev = []
