[package]
name = "parlia-ibc-proto"
version = "0.2.0"
edition = "2021"

[lib]
name = "parlia_ibc_proto"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost       = { version = "0.11", default-features = false }
serde       = { version = "1.0", default-features = false }
ibc-proto   = { version = "0.26.0", default-features = false }

[features]
default     = ["std"]
std         = []